--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.poetry]
 name = "dbt-metrics-converter"
-version = "0.1.1"
+version = "0.1.3"
 description = "Easily convert out of date, or unsported metrics spec into the latest suported metrics spec in dbt"
 authors = ["Jordan Stein <jordan.stein77@gmail.com>"]
 readme = "README.md"
-packages = [{include = "converter"}]
+packages = [{include = "converter"},{include = "metricflow_parsing"}]
 
 [tool.poetry.dependencies]
 python = ">=3.9,<3.10"
@@ -19,5 +19,5 @@ requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
- dbt-convert= 'converter.main:cli'
+ dc= 'converter.main:cli'
 
