--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "dbt-metrics-converter"
-version = "0.1.5b0"
-description = "Easily convert out of date, or unsported metrics spec into the latest suported metrics spec in dbt"
+version = "0.1.5.1"
+description = "Easily convert an out of date dbt metrics spec into the latest suported metrics spec in dbt"
 authors = ["Jordan Stein <jordan.stein77@gmail.com>"]
 readme = "README.md"
 packages = [{include = "converter"},{include = "metricflow_parsing"}]
