--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dbt-semantic-interfaces = "^0.1.0.dev4"
 dbt-core = "^1.5.0"
 click = "^8.1.3"
 lkml = ">=1.3.1"
+pydantic = ">=2.4.2"
 
 
 [build-system]
